--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,67 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="<%= BASE_URL %>assets/img/logos/bulkit-green.svg">
+
+     <!--Core CSS -->
+     <link rel="stylesheet" href="<%= BASE_URL %>assets/css/bulma.css">
+     <link rel="stylesheet" href="<%= BASE_URL %>assets/css/app.css">
+     <link rel="stylesheet" href="<%= BASE_URL %>/css/vendor/icon.min.css">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
+
+     <link rel="stylesheet" href="<%= BASE_URL %>assets/css/core_agency.css">
+     <link rel="stylesheet" href="<%= BASE_URL %>assets/css/core_kit7.css">
+
+     <link rel="stylesheet" href="<%= BASE_URL %>assets/css/core_kit2.css">
+
+
+     <link rel="stylesheet" href="<%= BASE_URL %>assets/css/core_demo.css">
+
+    <title>Ex Machina</title>
   </head>
+
+  <!-- Start of Async Drift Code -->
+<!-- Start of Async Drift Code -->
+<script>
+  "use strict";
+  
+  !function() {
+    var t = window.driftt = window.drift = window.driftt || [];
+    if (!t.init) {
+      if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+      t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
+      t.factory = function(e) {
+        return function() {
+          var n = Array.prototype.slice.call(arguments);
+          return n.unshift(e), t.push(n), t;
+        };
+      }, t.methods.forEach(function(e) {
+        t[e] = t.factory(e);
+      }), t.load = function(t) {
+        var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+        o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+        var i = document.getElementsByTagName("script")[0];
+        i.parentNode.insertBefore(o, i);
+      };
+    }
+  }();
+  drift.SNIPPET_VERSION = '0.3.1';
+  drift.load('h6fyk7b7u36c');
+  </script>
+  <!-- End of Async Drift Code -->
+
   <body>
+    <div class="pageloader"></div>
+    <div class="infraloader is-active"></div>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+
+    <script src="<%= BASE_URL %>assets/js/app.js"></script>
+    <script src="<%= BASE_URL %>assets/js/functions.js"></script>
+    <script src="<%= BASE_URL %>assets/js/contact.js"></script>
+    <script src="<%= BASE_URL %>assets/js/main.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
